# Frogito

./: .gitignore  README.md  build.gradle  build_frogito.sh  diagrams.puml  run_frog.sh  setting.gradle  Требования  Требования.md
.github/workflows/: ci.yml
benchmarks/: runner.py
docs/: allclasses-index.html  allpackages-index.html  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  type-search-index.js
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
docs/lang/: Main.html  package-summary.html  package-tree.html
docs/lang/lexer/: BaseToken.html  BaseTokenTest.html  Token.html  TokenFactory.html  TokenPattern.html  TokenPatternTest.html  TokenType.html  package-summary.html  package-tree.html
e2e/: test_benchmarks.py  test_compiler.py
examples/: demo.frogc  factorial.frog  factroial.frogc  primes.frog  primes.frogc  quicksort.frog  test_jit_gc.frog  test_jit_gc.frogc
examples/demo/: array_size.frog  demo.frog  factorial.frog
examples/demo/frogitovm/src/bytecode/: bytecode_module.h
examples/demo/frogitovm/src/runtime/: errors.h  object.h  value.h
examples/demo/frogitovm/src/vm/: vm.h
examples/demo/frogitovm/tests/integration_tests/: bytecode_vm_test.cpp  error_handling_test.cpp
examples/demo/frogitovm/tests/unit_tests/: vm_test.cpp
examples/presentation/: conditional_operators.frog  factorial.frog  gc_trigger.frog  primes.frog  recursion.frog
frogitovm/: CMakeLists.txt
frogitovm/src/: main.cpp
frogitovm/src/bytecode/: bytecode_loader.cpp  bytecode_loader.h  bytecode_module.h
frogitovm/src/jni/: frogvm_jni.cpp
frogitovm/src/runtime/: array_object.h  bigint.h  heap.cpp  heap.h  value.h
frogitovm/src/vm/: vm.cpp  vm.h
frogitovm/tests/integration_tests/: bytecode_vm_test.cpp  error_handling_test.cpp  real_file_test.cpp
frogitovm/tests/unit_tests/: bytecode_loader_test.cpp  heap_test.cpp  value_test.cpp  vm_test.cpp
presentation/: arithmetic.frog  jit_opt_dispatch.frog  jit_speed.frog  loops.frog  primes.frog  sorting.frog
src/main/java/lang/: Main.java  package-info.java
src/main/java/lang/app/: Main.java
src/main/java/lang/bytecodeGenerator/: BytecodeGenerator.java  Disassembler.java  FrogcWriter.java
src/main/java/lang/cli/: FrogcMain.java
src/main/java/lang/lexer/: BaseToken.java  Lexer.java  LexingException.java  Token.java  TokenFactory.java  TokenPattern.java  TokenType.java  package-info.java
src/main/java/lang/optimizer/: AstOptimizer.java
src/main/java/lang/parser/: ParseException.java  Parser.java
src/main/java/lang/vm/: FrogVM.java
src/test/java/lang/cli/: FrogcCliTest.java
(+48 files in other folders)
